@@ -18,18 +18,6 @@
                 <include>*:jar:*</include>
             </includes>
         </dependencySet>
-        <dependencySet>
-            <outputDirectory>/lib/endorsed</outputDirectory>
-            <directoryMode>774</directoryMode>
-            <fileMode>444</fileMode>
-            <scope>runtime</scope>
-            <includes>
-                <include>org.apache.xerces:*</include>
-                <include>xalan:*</include>
-                <include>xml-resolver:*</include>
-            </includes>
-        </dependencySet>
-        
     </dependencySets>
     
     <fileSets>
