@@ -4,6 +4,10 @@ Release Notes - Metadata Aggregator - Version 0.9.0
 Highlights
     * Now using Spring resources instead of (now deprecated) Shibboleth
       resources.
+    * Now uses the JAXP implementation supplied by the JRE, rather than
+      a much older "endorsed" version. This will affect any configurations
+      which depended on Xerces or Xalan specific extensions; re-endorse
+      the implementation of your choice if this is an issue. 
 
 API Changes
     * ElementFormattingStage removed
@@ -21,6 +25,7 @@ API Changes
     * [MDA-127] - simplify output from StatusMetadataLoggingStage
     * [MDA-128] - use @Override annotation in MDA sources
     * [MDA-129] - remove semi-functional ElementFormattingStage
+    * [MDA-133] - unbundle "endorsed" libraries from distribution
 
 
 Release Notes - Metadata Aggregator - Version 0.8.0
